Final corrections and pdf

--- a/chapter_LEMs.tex
+++ b/chapter_LEMs.tex
@@ -11,6 +11,7 @@
 \label{gilbert_fig}
 \end{subfigure}%
 
+\vspace{4em}
 \begin{subfigure}[b]{0.7\textwidth}
 \includegraphics[width=\textwidth]{LEMFinalRevisedmanuscriptDAVFinalrevisions-img/LEMFinalRevisedmanuscriptDAVFinalrevisions-img002.png} 
 \caption{A computer numerical landscape evolution model \citep[CHILD,][]{Tucker2001}.}
@@ -34,7 +35,7 @@ The LEMs discussed in this chapter are primarily designed to simulate processes 
 
 \subsection{Governing Equations}
 
-LEMs are ultimately driven by a set of mathematical equations: the \textit{geomorphic transport functions}, often termed `laws' \citep{dietrich2003geomorphic,Tucker2010}. These laws may be derived from physical first principles, empirical evidence, or sometimes a combination of both. When implemented in a model, these laws are applied to a series of discretised cells or nodes representing the landscape. Conservation of mass is applied when calculating the fluxes in and out of neighbouring cells or nodes. The most common assumption made in most LEMs with respect to conservation of mass is that each column of rock or regolith has discrete boundaries between layers of different densities (Figure \ref{fig_conservation_mass}), i.e. there is no allowance for a dynamic variation of density throughout the each column in the model. Some models may further assume a uniform layer of substrate with no separate regolith layer. With these assumptions in mind, the majority of LEMs use a mass balance equation of the form:
+LEMs are ultimately driven by a set of mathematical equations: the \textit{geomorphic transport functions}, often termed `laws' \citep{dietrich2003geomorphic,Tucker2010}. These laws may be derived from physical first principles, empirical evidence, or sometimes a combination of both. When implemented in a model, these laws are applied to a series of discretised cells or nodes representing the landscape. Conservation of mass is applied when calculating the fluxes in and out of neighbouring cells or nodes. The most common assumption made in most LEMs with respect to conservation of mass is that each column of rock or regolith has discrete boundaries between layers of different densities (Figure \ref{fig_conservation_mass}), i.e. there is no allowance for a dynamic variation of density throughout each column in the model. Some models may further assume a uniform layer of substrate with no separate regolith layer. With these assumptions in mind, the majority of LEMs use a mass balance equation of the form:
 
 \begin{equation*}
 \frac{{\partial}\eta }{{\partial}t}=B-{\nabla}q_s
@@ -106,7 +107,7 @@ LEM development has bloomed in the previous two decades, in part due to signific
 \subsection{CAESAR-Lisflood}
 A family of related models have developed from the original CAESAR LEM \citep{coulthard1996cellular,coulthard2002cellular}. The original CAESAR model is a cellular automaton model that simulates water flow across the landscape, fluvial erosion, sediment deposition, and hillslope processes. CAESAR-Lisflood \citep{Coulthard2013}, the current iteration of the model, uses a more physical-based surface water flow component based on a simplified numerical solution to the shallow water equations \citep[LISFLOOD-FP][]{bates2010simple}. The non-steady hydrological component of the model allows effects such as tidal flows, lake filling, and the blocking of valley floors by alluvial fans to be represented in LEMs \citep{Coulthard2013}. 
 
-CAESAR-Lisflood is suited to simulation of entire drainage basins (in `catchment mode') or sub-sections of a river channel (in `reach mode'), e.g.\citet{Coulthard2006,van2007embedding}. CAESAR-Lisflood is an appropriate tool for timescales ranging from modelling the effects of a single storm over a few hours, through seasonal, to annual, and millennial time scales of landscape evolution. Process representation in CAESAR-Lisflood is focussed primarily on hydrodynamics and sediment transport, including the simulation of multiple-sized grain fractions. 
+CAESAR-Lisflood is suited to simulation of entire drainage basins (in `catchment mode') or sub-sections of a river channel (in `reach mode'), e.g.  \citet{Coulthard2006,van2007embedding}. CAESAR-Lisflood is an appropriate tool for timescales ranging from modelling the effects of a single storm over a few hours, through seasonal, to annual, and millennial time scales of landscape evolution. Process representation in CAESAR-Lisflood is focussed primarily on hydrodynamics and sediment transport, including the simulation of multiple-sized grain fractions. 
 
 Though there is theoretically no upper limit to the time periods that can be simulated with CAESAR-Lisflood, existing studies have focused on shorter scales from decades up to thousands of years, such as simulating sediment output of a small basin under short term climate predictions \citep{Coulthard2012a}, simulating storm and tidal surge dynamics on coastal environments \citep{Skinner2015}, and forecasting the short term geomorphic evolution of former mine-workings and excavations \citep{pasculli2015cellular}.
 
@@ -116,11 +117,11 @@ Though there is theoretically no upper limit to the time periods that can be sim
 \label{fig_LEM_CAEASR_Lisflood}
 \end{figure}
 
-CAESAR-Lisflood uses a graphical user interface (GUI) to set model parameters and display output (Figure \ref{fig_LEM_CAEASR_Lisflood}). The GUI makes model set-up quick and easier for users with less familiarity with command-line operations or code modification. The current version is limited to running in a Windows-only environment. The integration of visualisation with the core model code also allows the user to view model output as the simulation progresses (Figure \ref{fig_LEM_CAEASR_Lisflood}), this has the advantage of letting the user monitor output without having to wait for a full simulation to complete and visualise the output in a separate step. 
+CAESAR-Lisflood uses a graphical user interface (GUI) to set model parameters and display output (Figure \ref{fig_LEM_CAEASR_Lisflood}). The GUI makes model set-up quick and easier for users with less familiarity with command-line operations or code modification. The current version is limited to running in a Windows-only environment. The integration of visualisation with the core model code also allows the user to view model output as the simulation progresses (Figure \ref{fig_LEM_CAEASR_Lisflood}); this has the advantage of letting the user monitor output without having to wait for a full simulation to complete and visualise the output in a separate step. 
 
 \subsection{CHILD}
 
-The Channel Hillslope Integrated Landscape Development model \citep[CHILD][]{tucker2001child} is another widely used model for investigating landscape evolution in a variety of environments, on temporal scales from decades to millions of years. The modular design of the LEM has facilitated its expansion over recent years and it now supports various types of geomorphic process representation. CHILD supports initialisation of the terrain surface from DEM data or generating synthetic topographies from scratch. A wide range of fluvial incision processes can be simulated with CHILD, including both detachment- and transport-limited erosion models, sediment transport, and a range of hydrological and rainfall-runoff generation routines. Recent development of modules has extended process representation to include, for example, modules of dynamic vegetation growth \citep{Collins2004}, floodplain evolution \citep{Clevis2006}, dynamic adjustment of channel width \citep{Attal2008}, representation of sediment grain size \citep{Gasparini2004}, debris flows \citep{Lancaster2003}, and stochastic rainfall generation \citep{Tucker2000}.
+The Channel Hillslope Integrated Landscape Development model \citep[CHILD,][]{tucker2001child} is another widely-used model for investigating landscape evolution in a variety of environments, on temporal scales from decades to millions of years. The modular design of the LEM has facilitated its expansion over recent years and it now supports various types of geomorphic process representation. CHILD supports initialisation of the terrain surface from DEM data or generating synthetic topographies from scratch. A wide range of fluvial incision processes can be simulated with CHILD, including both detachment- and transport-limited erosion models, sediment transport, and a range of hydrological and rainfall-runoff generation routines. Recent development of modules has extended process representation to include, for example, modules of dynamic vegetation growth \citep{Collins2004}, floodplain evolution \citep{Clevis2006}, dynamic adjustment of channel width \citep{Attal2008}, representation of sediment grain size \citep{Gasparini2004}, debris flows \citep{Lancaster2003}, and stochastic rainfall generation \citep{Tucker2000}.
 
 CHILD differs from many of the other models described in this section, as it eschews a traditional grid-based spatial discretisation in favour of a triangular mesh, or TIN. As previously discussed in Section \ref{sec_technical}, this allows the model resolution to vary spatially across the domain, becoming higher in regions where smaller scale features and processes operate, such as river meanders, and coarser where features are much larger in spatial extent, such as floodplains and hillslopes \citep{Tucker2001}. 
 
@@ -186,7 +187,7 @@ Techniques to indirectly measure the rates of landscape change are wide-ranging,
 
 Through the rise of digital photogrammetric techniques, such as airborne and terrestrial laser scanning, direct measurement of whole-landscape morphological change is now possible at high enough resolutions to quantify small differences in topographic features, particularly in rapidly evolving landscapes \citep{rosser2005terrestrial,vaaja2011mapping}. Using these methods to aid model confirmation would be limited to small scale studies, as processing of point cloud data from these sources can be highly computationally expensive \citep{axelsson1999processing}. 
 
-At longer, geomorphologically significant timescales, a range of techniques becomes available to assist in the calibration of LEMs and confirmation of hypotheses. Optically stimulated luminescence dating uses a property of quartz and feldspar minerals that records the amount of time they have sat in a sedimentary or soil deposit, which can be used for dating landforms \citep{aitken1998introduction,Stokes1999a,Murray2000}. The applicability of this technique to different temporal scales is site-specific and ranges from years to upwards of hundreds of thousands of years. Cosmogenic radionuclide (CRN) dating is a technique based on the interaction of cosmic rays with certain isotopes in minerals in the Earth's surface \citep{Anderson1996,dunai2010cosmogenic}. The production rate of certain isotopes can then be used to determine absolute ages and erosion rates in the landscape. A recent application combining an LEM with a model of CRN production rates is found in \citep{mudd2017detection}, where it is used to explore the detection of transience in landscapes. The method is suitable for determining ages up to about 4 million years \citep{Burbank2011}.
+At longer, geomorphologically significant timescales, a range of techniques becomes available to assist in the calibration of LEMs and confirmation of hypotheses. Optically stimulated luminescence dating uses a property of quartz and feldspar minerals that records the amount of time they have sat in a sedimentary or soil deposit, which can be used for dating landforms \citep{aitken1998introduction,Stokes1999a,Murray2000}. The applicability of this technique to different temporal scales is site-specific and ranges from years to upwards of hundreds of thousands of years. Cosmogenic radionuclide (CRN) dating is a technique based on the interaction of cosmic rays with certain isotopes in minerals in the Earth's surface \citep{Anderson1996,dunai2010cosmogenic}. The production rate of certain isotopes can then be used to determine absolute ages and erosion rates in the landscape. A recent application combining an LEM with a model of CRN production rates is found in \citet{mudd2017detection}, where it is used to explore the detection of transience in landscapes. The method is suitable for determining ages up to about 4 million years \citep{Burbank2011}.
 
 \subsection{Topographic Metrics}
 In the past, looser forms of qualitative assessment have been used where LEMs are applied in an exploratory manner, such as to test mathematical models of geomorphic processes, or make speculative predictions of landscape evolution. In this sense, topographies generated by LEMs can be compared to real landscapes that they are intended to represent. Visual inspection of real versus simulated terrains can provide some degree of hypothesis confirmation \citep{bras2003six,hooke2003predictive}. However, it is recommended that this approach be extended to quantitative analysis by using a range of topographic metrics to compare simulated topographies with their natural counterparts. Such metrics include: mean relief, slope, river profile concavity, channel steepness indices \citep[e.g.][]{wobus2006tectonics}, terrain curvature, hypsometry, and roughness. A similar technique of comparing LEM output to physical analogue models has also been implemented by \citet{hancock2002testing}. 
