--- a/chapter_events.tex
+++ b/chapter_events.tex
@@ -1,6 +1,6 @@
-\chapter{Model set up and parameterisation of two flash flood events in the UK}
+\chapter{Model setup and parameterisation of two flash flood events in the UK}
 \label{chapter_events}
-\chaptermark{Severe storms in Cornwall and northern England}
+\chaptermark{Flash flood case studies in UK catchments}
 
 \section{Background}
 Intense rainfall events may be short lived, lasting only a few hours, but have the potential to cause substantial and destructive flooding \citep{lane2008climate,pitt2008pitt}. In the UK, many of these storms occur in the summer \citep{Kendon2014}, and their severity is often the result of a combination of meteorological factors. From a meteorological perspective, flash flooding can be predicted through an ingredients-based method; a systematic assessment of the key components present to cause an intense rainfall event likely to lead to flash flooding \citep{Doswell1996}. In the ingredients-based approach, flash flooding occurs when there is a combination of a high rainfall rate for an extended duration of time (usually on the order of hours). Rainfall totals are in turn related to the length of the rainfall event. Factors that lead to high rainfall intensity during an event include the forced ascent of moist air, usually associated with orographically-forced rainfall events \citep{Barros1994,Houze2012}. The duration of the event is dependent of the speed of movement and the size of the system bringing rainfall; given equal intensity rainfall rates, a large, slow moving rainfall feature will cause much higher rainfall totals in a river catchment that a fast moving, smaller feature. 
@@ -14,7 +14,7 @@ This chapter describes two intense rainfall and flash flooding events in the UK 
 The two events used as case studies took place in 1) the Ryedale catchment, near the town of Helmsley, North Yorkshire, 2005; and  2) the Valency catchment near the village of Boscastle, Cornwall, 2004. Both catchments experienced intense rainfall leading to extensive and damaging flash flooding \citep{golding2005boscastle,sibley2009analysis}. There were significant economic impacts for both communities, as well as geomorphological changes to the river channels and flood plains observed in the aftermath of the flooding \citep{wallingford2005flooding,wass2008investigation}.
 
 \section{Meteorological setting}
-The case studies were chosen as they represented infrequent events in each particular catchment. Because there is no commonly agreed definition of what constitutes an extreme or infrequent event \citep[e.g.][]{wilby2008climate,fowler2010detecting,jones2014objective,}, for the purpose of this study, flood events likely omly to occur approximately once in several hundred years were chosen. (The return period for the 3 hour rainfall event is given in Table \ref{table_met_setting}.) Peak river discharges for each of the case study flood events exceeded the 99th percentile for their respective catchments \citep{hannaford2004development,NRFA}.  An overview map of the catchment locations is given in Figure \ref{fig_location_map}, marked by the location of their main settlements. Table \ref{table_met_setting} summarises the key features of each catchment and its associated storm.
+The case studies were chosen as they represented infrequent events in each particular catchment. Because there is no commonly agreed definition of what constitutes an extreme or infrequent event \citep[e.g.][]{wilby2008climate,fowler2010detecting,jones2014objective,}, for the purpose of this study, flood events likely only to occur approximately once in several hundred years were chosen. (The return period for the 3 hour rainfall event is given in Table \ref{table_met_setting}.) Peak river discharges for each of the case study flood events exceeded the 99th percentile for their respective catchments \citep{hannaford2004development,NRFA}.  An overview map of the catchment locations is given in Figure \ref{fig_location_map}, marked by the location of their main settlements. Table \ref{table_met_setting} summarises the key features of each catchment and its associated storm.
 
 \begin{figure}[htb]
 \includegraphics[width=11cm]{chp_events_figures_scripts/figure_location_map.eps}
@@ -58,7 +58,7 @@ On the day of the storm, rainfall accumulations of up to 184mm from the Lesnewth
 
 
 \subsection{Ryedale, North York Moors storm 2005}
-The Ryedale storm occurred on 19 June 2005. Intense rainfall throughout the afternoon led to total accumulated rainfall amounts of up to 89mm in Ryedale between 1400--1800 UTC measured by the Helmsley raingauge. Peak instantaneous rainfall rates were estimated to have been around 32.5mm hr\(^-1\) \citep{sibley2009analysis} to 59.4 mm hr\(^{-1}\) \citep{hopkins2012knowledge}, though one report states they reached as high as 125 mm hr\(^{-1}\) \citep{cinderey2005north}. Figure \ref{fig_ryedale_rain_totals} shows the total accumulate rainfall radar totals from the 1km composite radar product. Most areas of the catchment received total rainfall accumulations similar to the reported raingauge figure (89mm), though up to 131mm is reported in one grid square in the south of the catchment area.
+The Ryedale storm occurred on 19 June 2005. Intense rainfall throughout the afternoon led to total accumulated rainfall amounts of up to 89mm in Ryedale between 1400--1800 UTC measured by the Helmsley raingauge. Peak instantaneous rainfall rates were estimated to have been around 32.5mm hr\(^-1\) \citep{sibley2009analysis} to 59.4 mm hr\(^{-1}\) \citep{hopkins2012knowledge}, though one report states they reached as high as 125 mm hr\(^{-1}\) \citep{cinderey2005north}. Figure \ref{fig_ryedale_rain_totals} shows the total accumulated rainfall radar totals from the 1km composite radar product. Most areas of the catchment received total rainfall accumulations similar to the reported raingauge figure (89mm), though up to 131mm is reported in one grid square in the south of the catchment area.
 
 Antecedent conditions before the Ryedale storm of 2005 were dry over a prolonged period over much of the region \citep{sibley2009analysis}, leading to cracking of the surface peat in the higher elevations of the catchment. Soil moisture deficit was estimated to be around 60mm in the catchment, higher than usual due to the drier conditions in the preceding months \citep{wass2008investigation}. With a high soil moisture deficit, thinner soils in the upper reaches of the catchment would have been dry before the intense rainfall.
 
@@ -80,7 +80,7 @@ The routing of flood waters in the Boscastle flood was complicated due to the ro
 The geomorphological impacts of the flood event were well documented in the aftermath of the event \citep{wallingford2005flooding}. The Valency river channel and many of its tributaries experienced channel avulsion\footnote{Movement of the original channel to a new position within the flood plain.} in places, as well as significant downcutting in the upper tributary channels of the catchment. In a number of places the channel avulsion was substantial enough to straighten the channel and increase the local gradient of the river, potentially increasing flow velocities and shear stresses acting on the channel bed. There were large amounts of sediment observed in the river flow at the time, ranging in size from fine silts to boulders. There were some areas of sediment deposition observed along the river channel banks and floodplain, and a sizeable area of sediment deposition in Boscastle harbour. However, most stretches of the main river channel and its tributaries showed net erosion in the form of channel widening (up to 3--4 metres) and deepening (of up to 2 metres) \citep{wallingford2005flooding}.
 
 \subsection{Ryedale, North Yorkshire, 2005}
-Flooding was widespread in the Ryedale catchment, with river levels reaching up to 3.5m at Hawnby, a smaller settlement upstream of Helmsley. At the peak of the flood, the Hawby gauging station building was completely submerged\citep{wass2008investigation}. In Helmsley, the largest settlement, further downstream, similar river level rises of up to 2m were reported at the peak of the flood in the evening and into the night. 
+Flooding was widespread in the Ryedale catchment, with river levels reaching up to 3.5m at Hawnby, a smaller settlement upstream of Helmsley. At the peak of the flood, the Hawby gauging station building was completely submerged  \citep{wass2008investigation}. In Helmsley, the largest settlement, further downstream, similar river level rises of up to 2m were reported at the peak of the flood in the evening and into the night. 
 
 Geomorphologically, the Ryedale catchment saw relatively rapid change considering the short duration of the storm and subsequent flood on 19 June. In the aftermath of the flood, up to 2--3 metres of channel downcutting and erosion were reported to have take place in the upper reaches of the tributaries of the catchment \citep{hopkins2012knowledge,wass2008investigation} as well as significant amounts of sediment and debris deposition in the lower reaches of the catchment around Helmsley \citep{hopkins2012knowledge}. The storm triggered many landslides on hillslopes within the catchment, including 105 reported shallow landslides in the catchment, as well as two large peat slides in moorland areas covering up to 3.7 ha of mass movement in areal extent \citep{galiatsatos2007assessment,wass2008investigation}. Dry antecedent conditions in the area are believed to have been a main cause of landsliding in the area by weakening the peat moorland within the catchment \citep{sibley2009analysis}. Dry conditions preceeding summer storms can cause shrinkage and cracking in peatlands, leading to greater risk of erosion in heavy downpours \citep{warburton2004hydrological}. 
 The economic damage was also substantial for a sparsely populated area. Three bridges were destroyed at a cost of £2.9 million, as well as flooding of 121 properties \citep{wass2008investigation}. Economic loss included agricultural damage such as loss of land and livestock \citep{sibley2009analysis}. Many residents were displaced for months during repair and were reported to have suffered illness and psychological trauma from the event \citep{hopkins2012knowledge}.
@@ -172,7 +172,7 @@ Ryedale             &  2005-06-18 00:00  &  2005-06-20 23:59 \\
 \end{table}
 
 \subsubsection{Rainfall spatial resolution}
-In order to assess the sensitivity of hydrogeomorphic processes to the spatial details of precipitation, rainfall spatial inputs were alternated in each simulation between a spatially uniform rainfall input and a 1km gridded rainfall input. Both the spatially uniform and gridded inputs were based on the same original rainfall source data -- the UK Met Office Nimrod 1km-composite radar data product \citep{metoffice2003nimrod}. The uniform rainfall input data were created from averaging out the gridded data in spcae over the model domain. The temporal resolution of the five minute interval data was preserved, giving a time series of spatially averaged rainfall rates for the duration of the each simulation. To reduce the range of variables within the set of ensemble simulations, only the spatial resolution of rainfall was assessed in this study -- other studies had already investigated the effects of the \textit{temporal} resolution of rainfall data on discharge and erosion rates \citep{nicotina2008impact,Coulthard2013,coulthard2016sensitivity}. In all experiments, the temporal resolution of rainfall data was maintained at five minute intervals. To summarise, the two types of rainfall spatial input used were: 
+In order to assess the sensitivity of hydrogeomorphic processes to the spatial details of precipitation, rainfall spatial inputs were alternated in each simulation between a spatially uniform rainfall input and a 1km gridded rainfall input. Both the spatially uniform and gridded inputs were based on the same original rainfall source data -- the UK Met Office Nimrod 1km-composite radar data product \citep{metoffice2003nimrod}. The uniform rainfall input data were created from averaging out the gridded data in space over the model domain. The temporal resolution of the five minute interval data was preserved, giving a time series of spatially averaged rainfall rates for the duration of the each simulation. To reduce the range of variables within the set of ensemble simulations, only the spatial resolution of rainfall was assessed in this study -- other studies had already investigated the effects of the \textit{temporal} resolution of rainfall data on discharge and erosion rates \citep{nicotina2008impact,Coulthard2013,coulthard2016sensitivity}. In all experiments, the temporal resolution of rainfall data was maintained at five minute intervals. To summarise, the two types of rainfall spatial input used were: 
 
 \begin{itemize}
 \item Uniform or `lumped' precipitation: Radar-derived rainfall rates across the catchment are spatially-averaged to produce a catchment-wide rainfall rate. In other words, every grid cell in the model domain receives the same rainfall rate at each five minute rainfall data timestep.
