--- a/chapter_floodinundation.tex
+++ b/chapter_floodinundation.tex
@@ -15,7 +15,7 @@
 
 
 %Spatial resolution
-The question of whether the hydrological response of a river catchment is sensitive to the spatial detail in rainfall input  is unresolved, with a number of different studies arriving at seemingly conflicting conclusions as to the exact role of rainfall spatial variability. One early study using deterministic modelling of river catchments and synthetic rainfall fields \citep{wilson1979influence} suggests that detailed space--time representations of rainfall are needed in distributed hydrological models to produce accurate flood forecasts. Predicting peak discharge in a small catchment (7.5km\(^2\)) is sensitive to the temporal resolution of rainfall input data, but less so to the spatial distribution of rainfall inputs during single storm events\citep{krajewski1991monte}. Over longer time scales (on the order of decades), a similar conclusion is reached by \citet{coulthard2016sensitivity}, finding that temporal resolution of rainfall input data is a greater control on hydrological outputs over long time periods than spatial resolution. 
+The question of whether the hydrological response of a river catchment is sensitive to the spatial detail in rainfall input  is unresolved, with a number of different studies arriving at seemingly conflicting conclusions as to the exact role of rainfall spatial variability. One early study using deterministic modelling of river catchments and synthetic rainfall fields \citep{wilson1979influence} suggests that detailed space--time representations of rainfall are needed in distributed hydrological models to produce accurate flood forecasts. Predicting peak discharge in a small catchment (7.5km\(^2\)) is sensitive to the temporal resolution of rainfall input data, but less so to the spatial distribution of rainfall inputs during single storm events  \citep{krajewski1991monte}. Over longer time scales (on the order of decades), a similar conclusion is reached by \citet{coulthard2016sensitivity}, finding that temporal resolution of rainfall input data is a greater control on hydrological outputs over long time periods than spatial resolution. 
 
 The catchment size is likely to play a part in determining sensitivity to rainfall spatial distribution, with several studies suggesting smaller catchment sizes can dampen the effect of rainfall spatial variability \citep{segond2007simulation,nicotina2008impact}. The idea of catchment-size dependence has been developed further \citep{gabellani2007propagation}, to suggest that sensitivity to rainfall spatial heterogeneity depends on the characteristic size of the rainfall feature and the catchment size. Systematic investigation of the role of catchment size and morphology have suggested that the ratio between the characteristic hillslope length of the catchment and the rainfall feature determines sensitivity to rainfall spatial heterogeneity \citep{nicotina2008impact}. In cases where the rainfall feature is much greater in size than the typical hillslope length, the effects of rainfall spatial heterogeneity on runoff generation and hydrological response are limited. 
 
@@ -47,7 +47,7 @@ There are numerous user-defined parameters in the HAIL-CAESAR model (and in land
 
 Initially, the experiments were designed to use the default model value of \(m = 0.002\) for grassland \citep{beven1984testing}. Both the Boscastle and Ryedale catchments are a mixture of agricultural pasture land, some sparse vegetation, and small urban settlements; but the dominant land cover is sparse vegetation or grassland, making the deafult \(m = 0.002\) value seem most appropriate as a first approximation. Preliminary experimentation showed that the default value of \(m = 0.002\) was adequate in reproducing the Boscastle hydrograph noted in an earlier study \citep{wallingford2005flooding} (See also Figure \ref{fig_boscastle_hydrograph_ensemble}), therefore no further detailed sensitivity analyses were carried out for Boscastle with respect to the \(m\) parameter. 
 
-For the Ryedale catchment, however, preliminary experimentation indicated that the hydrological response of the catchment was highly sensitive to the choice of \(m\) parameter. To assess the full range of sensitivity to the choice of \textit{m} parameter in the Ryedale catchment, a series of simulations were carried out with a range of \textit{m} values for both uniform and gridded rainfall inputs. Simulations of the Ryedale flood event were carried out with the \textit{m} values shown in Table \ref{table-m-sens}. Each of the simulations was run with the model in hydrology-only mode, with no erosional process parameterisation switched on. To assess whether there was further sensitivity to the type of rainfall input (gridded or uniform), the sensitivity analyses were repeated with both types of rainfall input data.
+For the Ryedale catchment, however, preliminary experimentation indicated that the hydrological response of the catchment was highly sensitive to the choice of \(m\) parameter. To assess the full range of sensitivity to the choice of \textit{m} parameter in the Ryedale catchment, a series of simulations were carried out with a range of \textit{m} values for both uniform and gridded (spatially variable) rainfall inputs. Simulations of the Ryedale flood event were carried out with the \textit{m} values shown in Table \ref{table-m-sens}. Each of the simulations was run with the model in hydrology-only mode, with no erosional process parameterisation switched on. To assess whether there was further sensitivity to the type of rainfall input (gridded or uniform), the sensitivity analyses were repeated with both types of rainfall input data.
 
 \begin{table}
 \begin{tabular}{lc}
@@ -100,7 +100,7 @@ It was decided not to use different values of \(m\) for each of uniform and grid
 
 %Comparisons with the actual hydrographs from the gauged basins?
 \subsubsection{General observations}
-At the catchment scale, hydrological response was sensitive to both the rainfall resolution and the choice of erosional model. For both catchments, higher resolution rainfall input data resulted in a greater maximum river discharge. In the Ryedale experiments, simulations using the gridded rainfall input experienced a flashier hydrological response, reaching peak discharge several hours before the uniform rainfall input cases. This large difference in timing was not observed in any of the Boscastle simulations, with all simulations reaching peak discharge within 10 minutes of each other. Peak discharges and the timings of peak flow for each simulation are tabulated in Table \ref{table_discharges}.
+At the catchment scale, hydrological response was sensitive to both the rainfall resolution and the choice of erosional model. For both catchments, higher resolution rainfall input data resulted in a greater maximum river discharge. In the Ryedale experiments, simulations using the gridded (spatially variable) rainfall input experienced a flashier hydrological response, reaching peak discharge several hours before the uniform rainfall input cases. This large difference in timing was not observed in any of the Boscastle simulations, with all simulations reaching peak discharge within 10 minutes of each other. Peak discharges and the timings of peak flow for each simulation are tabulated in Table \ref{table_discharges}.
 
 The choice of erosion model also influenced the hydrological response. When catchment erosion was modelled using a transport-limited (\texttt{TLIM}) case, peak discharges were higher in all cases, but the timing of hydrograph peaks remained similar for each case. The difference in peak discharges was minimal when comparing the detachment-limited (\texttt{DLIM}) cases to the hydrology-only simulations.
 
@@ -293,7 +293,7 @@ In comparison to erosional parameterisation, the spatial resolution of rainfall 
 
 The results from this study support the general consensus that there is some degree of sensitivity in catchment hydrology to rainfall spatial inputs, but in contrast to other studies, this sensitivity may be observed in much smaller catchments than previously thought. Furthermore, the flood inundation model used in this study appears to be more sensitive to spatial heterogeneity in rainfall inputs than it is to erosional parameterisation within the model, which may extend to hydrological modelling and flood forecasting in general. Further studies with different numerical models and different rainfall events would be needed to confirm this. 
 
-The findings here potentially offer some explanation to other other studies that have shown over longer timescales, hydrological outputs from catchments simulated with spatially variable rainfall input data can see significant increases in mean annual discharge \citep{coulthard2016sensitivity}. If individual events can show notable differences in hydrological outputs, over time this will lead to larger differences in mean annual discharges. The general idea of catchment-size sensitivity to rainfall inputs is not challenged, but there is still a lack of consensus at what spatial scale this becomes an dominating factor. These findings suggest that catchments smaller than previously thought are also sensitive to rainfall spatial heterogeneity.
+The findings here potentially offer some explanation to other other studies that have shown over longer timescales, hydrological outputs from catchments simulated with spatially variable rainfall input data can see significant increases in mean annual discharge \citep{coulthard2016sensitivity}. If individual events can show notable differences in hydrological outputs, over time this will lead to larger differences in mean annual discharges. The general idea of catchment-size sensitivity to rainfall inputs is not challenged, but there is still a lack of consensus at what spatial scale this becomes a dominating factor. These findings suggest that catchments smaller than previously thought are also sensitive to rainfall spatial heterogeneity.
 
 A secondary aim of this study was to investigate whether spatially detailed rainfall data leads to more accurate hydrological predictions, not merely \textit{different} predictions. Where available, measurements of the timing, magnitude, and spatial distribution of flood inundation were compared with the predictions made by the numerical model. Both the Ryedale and Boscastle events were extensively studied and surveyed in their aftermath and comparisons with previous modelling studies of each event were made where these were available. With respect to the aim of improving the accuracy of flood inundation predictions with high-resolution rainfall data, the results were mixed. For the Boscastle case study, there was better agreement with the peak discharges published in the \citet{wallingford2005flooding} report when using the gridded rainfall input to drive the numerical model, though a limitation of this comparison is that the hydrographs published in the HR Wallingford report were themselves based on estimates from eyewitness observations, reconstructions from water-level marks, and one-dimensional hydraulic modelling. Nonetheless, the better agreement with other published findings is encouraging for the case of using high-resolution rainfall data in hydrological models.
 
@@ -303,7 +303,7 @@ In the Ryedale case study, using gridded rainfall input actually produced a less
 \subsection{Hydrograph calibration and choice of \(m\) parameter value}
 The poorer performance of the Ryedale hydrograph forecast using the gridded rainfall data is likely due to the use of the uniform rainfall data to calibrate the Ryedale simulations and arrive at the best value of the \(m\) parameter. The same value of \(m = 0.005\) was then used in the Ryedale simulations using gridded rainfall input data, and this produces a less accurate prediction as a result (Figure \ref{fig_ryedale_hydrograph_ensemble}). In future work, it would appear necessary to calibrate the value of \(m\) for different input data sources of rainfall, rather than relying on a single value of \(m\) across all simulations of the same catchment. The simplicity of using a single \(m\) value in this study was deemed necessary to allow for easier isolation of which factors caused the most sensitivity out of rainfall spatial variability or erosion law parameterisation. The resulting limitation of this approach is that it is difficult to robustly assess the forecasting potential of the model without a further set of simulations with re-calibrated \(m\) values.
 
-Subsequent analysis showed that a separate sensitivity analyses using the gridded rainfall input revealed a different `best-fit' value of \(m=0.0075\) when using the gridded rainfall input (Figure \ref{fig_topmodel_m_ryedale_gridded}), leading to better hydrological predictions from the gridded rainfall input simulations. This raises the issue that the model can be configured with different parameters and arrive at the same or similar predictions -- a concept referred to as equifinality and one which is often encountered in the hydrological modelling community \citep{beven1993prophecy,beven2001equifinality,ebel2006physics} -- which somewhat limits the conclusions that can be drawn from the experiments comparing uniform rainfall inputs with gridded rainfall input. In this particular case, both choices of \(m\) value are within reasonable ranges for the types of environment simulated \citep{beven1984testing}, but depending on the choice of \(m\) value, the case for using spatially variable rainfall inputs can be either strengthed or weakened. Does one chose to calibrate the model based on the type of rainfall spatial input as well, and if so, should it be calibrated further based on the type of erosional parametrisation enabled in the model? The size of the parameter space in the HAIL-CAESAR model is large, and a systematic exploration of every single combination of parameters would be time consuming if it were required for every case study to be simulated. Answering these questions of model calibration is beyond the scope of this study, but a recommendation can be made for future studies using the TOPMODEL-based runoff generation in models to assess the sensitivity to the \(m\) parameter as hydrological outputs may be highly sensitive to its value.
+Subsequent analysis showed that a separate sensitivity analyses using the gridded rainfall input revealed a different `best-fit' value of \(m=0.0075\) when using the gridded rainfall input (Figure \ref{fig_topmodel_m_ryedale_gridded}), leading to better hydrological predictions from the gridded rainfall input simulations. This raises the issue that the model can be configured with different parameters and arrive at the same or similar predictions -- a concept referred to as equifinality and one which is often encountered in the hydrological modelling community \citep{beven1993prophecy,beven2001equifinality,ebel2006physics} -- which somewhat limits the conclusions that can be drawn from the experiments comparing uniform rainfall inputs with gridded rainfall input. In this particular case, both choices of \(m\) value are within reasonable ranges for the types of environment simulated \citep{beven1984testing}, but depending on the choice of \(m\) value, the case for using spatially variable rainfall inputs can be either strengthened or weakened. Does one chose to calibrate the model based on the type of rainfall spatial input as well, and if so, should it be calibrated further based on the type of erosional parameterisation enabled in the model? The size of the parameter space in the HAIL-CAESAR model is large, and a systematic exploration of every single combination of parameters would be time consuming if it were required for every case study to be simulated. Answering these questions of model calibration is beyond the scope of this study, but a recommendation can be made for future studies using the TOPMODEL-based runoff generation in models to assess the sensitivity to the \(m\) parameter as hydrological outputs may be highly sensitive to its value.
 
 % Discussion on erosional parameterisation.
 \subsection{Erosional parameterisation}
