--- a/chapter_geomorph.tex
+++ b/chapter_geomorph.tex
@@ -8,9 +8,9 @@
 
 \section{Introduction}
 
-Landscape evolution is punctuated by intense erosive episodes driven by flood events triggered by intense rainfall \citep{Wolman1960,newson1980geomorphological,Costa1995}. Understanding the role rainfall plays in erosional processes is of importance to both long-term landscape evolution studies \citep[e.g.][]{rinaldo1995geomorphological,tucker1997drainage,Tucker2000}, which have long sought effective ways of parameterising rainfall patterns within models \citep[e.g][]{Eagleson1978}.  Catchment sensitivity to rainfall variability is also important in the context of environmental prediction, such as predicting the likely geomorphological impacts of intense rainfall and flash flood events \citep[e.g.][]{lane2007interactions,deluis2010rainfall,milan2012geomorphic}. Given the possibility of changing hydro-meteorological conditions that may accompany climate change \citep{Kendon2014}, longer-term prediction of catchment sediment yields and erosion patterns has also seen an increased research effort in recent years \citep{coulthard2000modelling,Coulthard2012,hancock2017sediment}, The drive to understand how landscapes respond to climatic conditions is aided greatly through the use of numerical landscape evolution models \citep{Tucker2010}, which allow a wide range of scenarios to be tested, and quantify the sensitivity of particular processes to climatic boundary conditions, including rainfall distribution.
+Landscape evolution is punctuated by intense erosive episodes driven by flood events triggered by intense rainfall \citep{Wolman1960,newson1980geomorphological,Costa1995}. Understanding the role rainfall plays in erosional processes is of importance to both long-term landscape evolution studies \citep[e.g.][]{rinaldo1995geomorphological,tucker1997drainage,Tucker2000}, which have long sought effective ways of parameterising rainfall patterns within models \citep[e.g][]{Eagleson1978}.  Catchment sensitivity to rainfall variability is also important in the context of environmental prediction, such as predicting the likely geomorphological impacts of intense rainfall and flash flood events \citep[e.g.][]{lane2007interactions,deluis2010rainfall,milan2012geomorphic}. Given the possibility of changing hydro-meteorological conditions that may accompany climate change \citep{Kendon2014}, longer-term prediction of catchment sediment yields and erosion patterns has also seen an increased research effort in recent years \citep{coulthard2000modelling,Coulthard2012,hancock2017sediment}. The drive to understand how landscapes respond to climatic conditions is aided greatly through the use of numerical landscape evolution models \citep{Tucker2010}, which allow a wide range of scenarios to be tested, and quantify the sensitivity of particular processes to climatic boundary conditions, including rainfall distribution.
 
-Investigation into infrequent but geomorphologically formative flash flooding events has seen a resurgence by recent work such as \citet{Huang2006}, looking at the long-term implications of different geomorphically effective event discharges on fluvial incision. Other studies have sought to quantify the amount of bedrock erosion during individual large flood events \citep[e.g.][]{gupta2007catastrophic,lamb2010rapid,baynes2015erosion}, in an effort to better understand the role that low frequency, but high magnitude events have on landscape evolution. Still, our understanding of catchment-scale landscape evolution is far from complete -- the role that rainfall plays in individual events appears to be highly variable from case to case. The behaviour of streams and rivers within catchments can vary in response to the same magnitude of flood event -- some streams may erode during high flows, whereas others may deposit during high flows \citep{turowski2013large}. During small--medium flows, \citet{turowski2013large} also report that the dynamics of erosion are is reversed, with some rivers acting as agents of deposition during floods, rather than being primarily erosional, depending on the preconditioning of the catchment by previous events. Further studies have reported that rapid gorge formation can be driven primarily by small to moderate sized floods \citep{anton2015exceptional}, rather than rainfall events of much larger magnitude.
+Investigation into infrequent but geomorphologically formative flash flooding events has seen a resurgence by recent work such as \citet{Huang2006}, looking at the long-term implications of different geomorphically effective event discharges on fluvial incision. Other studies have sought to quantify the amount of bedrock erosion during individual large flood events \citep[e.g.][]{gupta2007catastrophic,lamb2010rapid,baynes2015erosion}, in an effort to better understand the role that low frequency, but high magnitude events have on landscape evolution. Still, our understanding of catchment-scale landscape evolution is far from complete -- the role that rainfall plays in individual events appears to be highly variable from case to case. The behaviour of streams and rivers within catchments can vary in response to the same magnitude of flood event -- some streams may erode during high flows, whereas others may deposit during high flows \citep{turowski2013large}. During small--medium flows, \citet{turowski2013large} also report that the dynamics of erosion are reversed, with some rivers acting as agents of deposition during floods, rather than being primarily erosional, depending on the preconditioning of the catchment by previous events. Further studies have reported that rapid gorge formation can be driven primarily by small to moderate sized floods \citep{anton2015exceptional}, rather than rainfall events of much larger magnitude.
 
 Temporal variability in rainfall patterns controls the evolution of landscapes over geological timescales, with the ability to influence the geomorphology of drainage basins and geometry of channel networks \citep{Tucker2000,Solyom2004}. The influence of spatial variability in rainfall patterns has affected the outcome of long-term topographic evolution, controlling morphology in landscapes subject to orogoraphic rainfall gradients \citep{solyom2007importance,han2014modeling,han2015measuring}. Sediment yields and morphological change are also sensitive to the resolution of rainfall inputs over decadal to millenial timescales \citep{coulthard2016sensitivity}. However, no study has yet looked at the sensitivity of erosion to rainfall spatial patterns during single storm events -- the goal of this chapter is to investigate the potential sensitivity of catchment-scale erosional processes to spatially distributed rainfall inputs.
 
@@ -81,7 +81,7 @@ Sediment flux predictions are presented at a catchment-wide scale, measured from
 %In contrast to water fluxes (Chapter \ref{chapter_flood_model_sensitivity}), 
 Sediment flux from both catchments was most sensitive to the sediment erosion parameterisation, rather than the spatial detail of rainfall inputs (Figures \ref{fig_boscastle_sedigraph_ensemble}, \ref{fig_ryedale_sedigraph_ensemble}). For both catchments simulated, sediment flux from each catchment was higher in the simulations using the transport-limited erosion law. The sediment flux increase observed in the Ryedale simulations ranged from 230\% (gridded rainfall) to 600\% (uniform rainfall) when switching from the detachment-limited to the transport-limited erosion law (Figure \ref{fig_ryedale_sedigraph_ensemble}). In the Boscastle study, sediment flux was over an order of magnitude higher when using the transport-limited erosion law over the detachment-limited law (Figure \ref{fig_boscastle_sedigraph_ensemble}). All detachment-limited simulations resulted in a much lower prediction in sediment flux.
 
-The influence of rainfall input data spatial resolution played a secondary role in determining sediment yields. In almost all simulations, when the same erosion law parameterisation was used, sediment yields were greater with gridded rainfall data input. In Ryedale, using gridded rainfall input increased peak sediment flux by approximately 140\% for transport-limited simulations, and 400\% in the detachment-limited simulations. in the Boscastle transport-limited and detachment-limited simulations, peak sediment flux increased by approximately 50\% in both cases. (Figure \ref{fig_boscastle_sedigraph_ensemble}). The patterns of peak sediment discharge also mirrored that of water discharge (see Chapter \ref{chapter_flood_model_sensitivity}, Section \ref{sec_hydrographs_flood}), with sediment flux peaking earlier in the simulations with higher resolution rainfall inputs. 
+The influence of rainfall input data spatial resolution played a secondary role in determining sediment yields. In almost all simulations, when the same erosion law parameterisation was used, sediment yields were greater with gridded rainfall data input. In Ryedale, using gridded rainfall input increased peak sediment flux by approximately 140\% for transport-limited simulations, and 400\% in the detachment-limited simulations. In the Boscastle transport-limited and detachment-limited simulations, peak sediment flux increased by approximately 50\% in both cases. (Figure \ref{fig_boscastle_sedigraph_ensemble}). The patterns of peak sediment discharge also mirrored that of water discharge (see Chapter \ref{chapter_flood_model_sensitivity}, Section \ref{sec_hydrographs_flood}), with sediment flux peaking earlier in the simulations with higher resolution rainfall inputs. 
 
 \begin{figure}[t]
 \includegraphics[width=14cm]{chp06_figures_scripts/figure_ryedale_sedigraph_ensemble.eps}
@@ -262,7 +262,7 @@ A further conclusion can also be made that rainfall spatial distribution does ha
 
 The study has touched upon whether landscape evolution models may be used for shorter-term forecasting tools to predict the impact of flash floods on the landscape, such as predicting local areas of channel erosion and deposition. There are still a number of limitations in current landscape erosion models that prevent them being used as tools of detailed predictive ability, notably the sensitivity from the choice of erosion laws as highlighted above. Using rainfall radar data as input to the model also introduces a further source of potential error (Chapter \ref{chapter_metdata}), which further compounds the uncertainty in predictions made by using a landscape evolution model in such a way to provide forecasts of landscape erosion in a single severe rainfall event. 
 
-The importance of high-magnitude, low-frequency storm events as drivers of longer-term landscape evolution is reinforced by this study. The amounts of channel incision predicted by the simulation (and confirmed in previously published geomorphological surveys) shows that a single storm can have as much erosive impact as centuries of higher-frequency, lower-magnitude events. If one were to extrapolate the differences in predictions between uniform and gridded rainfall inputs based on this study, the effect of rainfall spatial detail could be argued to play a secondary role in longer-term landscape evolution. Cumulatively the small differences observed in erosion between uniform and gridded rainfall inputs to the model may become more pronounced over longer-term landscape evolution simulations, reconciling this study with previously published work. These findings are made in the context of two catchments in the UK during heavy convective rainfall events. Other factors and feedbacks may come into play over longer timescales, in different catchments, or under different meteorological conditions. Nonetheless, the analysis of the numerical simulations presented in this chapter suggest that hydro-geomorphic processes are at least partly sensitive to the spatial distribution of rainfall during intense storms.
+The importance of high-magnitude, low-frequency storm events as drivers of longer-term landscape evolution is reinforced by this study. The amounts of channel incision predicted by the simulations, and confirmed in previously published geomorphological surveys of Boscastle \citep{wallingford2005flooding} and Ryedale \citep{dong2006evaluation,wass2008investigation}, shows that a single storm can have as much erosive impact as centuries of higher-frequency, lower-magnitude events. If one were to extrapolate the differences in predictions between uniform and gridded rainfall inputs based on this study, the effect of rainfall spatial detail could be argued to play a secondary role in longer-term landscape evolution. Cumulatively the small differences observed in erosion between uniform and gridded rainfall inputs to the model may become more pronounced over longer-term landscape evolution simulations, reconciling this study with previously published work. These findings are made in the context of two catchments in the UK during heavy convective rainfall events. Other factors and feedbacks may come into play over longer timescales, in different catchments, or under different meteorological conditions. Nonetheless, the analysis of the numerical simulations presented in this chapter suggest that hydro-geomorphic processes are at least partly sensitive to the spatial distribution of rainfall during intense storms.
 
 
 
