--- a/chapter_rainfallLEMs.tex
+++ b/chapter_rainfallLEMs.tex
@@ -27,9 +27,9 @@ q_w = k_qA^c
 \noindent
 where \(q_w\) is the water discharge, \(k_q\) a dimensional coefficient, \(A\) the contributing drainage area, and \(c\) the exponent that relates which portions of the drainage basin contribute to gathering precipitation and converting it to water discharge. A decrease in \(c\) represents a shift to more rainfall being gathered in the upper reaches of the stream. An increase in \(c\) represents rainfall being gathered in the lower reaches. The situation where \(c = 1\) implies rainfall input is equal along all sections of the river profile. The end result of this formulation is perhaps intuitive: more rainfall input in the upper reaches of the stream (decrease in \(c\)) results in more incision in the headwaters. However, the study reveals a key difference in the way that climatic and tectonic signals propagate along a river channel. Numerical results show that rainfall-driven perturbations propagate from the channel head downstream, whereas tectonic perturbations invariably propagate from base-level upwards towards the channel head. The authors, however, reach this conclusion without simulating the scenario where there is more contributing rainfall from the lower reaches, i.e. the value of \(c\) is higher. However, given the setting of the study (streams draining a mountain front) it is perhaps reasonable to assume an increasing precipitation rate as elevation increases with distance into the mountain range.
 
-River channel profiles are not the only markers of landscape evolution, though they do dominate the range of 1D modelling studies investigating sensitivity to the spatial distribution of rainfall \citep{Tucker2010}. Hillsope erosion rates are known to be sensitive to the spatially averaged rainfall rate, especially where vegetation cover is low. \citep{Owen2011}. Hillslope bedrock erosion decreases according to a power law as mean rainfall rates decrease, from semi-arid to hyperarid environments. In general though, the study of hillsope sensitivity to the spatial distribution of rainfall remains under-studied, particularly in the case of 1D profile evolution.
+River channel profiles are not the only markers of landscape evolution, though they do dominate the range of 1D modelling studies investigating sensitivity to the spatial distribution of rainfall \citep{Tucker2010}. Hillsope erosion rates are known to be sensitive to the spatially averaged rainfall rate, especially where vegetation cover is low \citep{Owen2011}. Hillslope bedrock erosion decreases according to a power law as mean rainfall rates decrease, from semi-arid to hyperarid environments. In general though, the study of hillsope sensitivity to the spatial distribution of rainfall remains under-studied, particularly in the case of 1D profile evolution.
 
-In the one-dimensional modelling studies discussed, there is a key limitation, which is often acknowledged by the authors. Channels profiles in 1D form are modelled without their tributary streams. The main stem of the channel is assumed to be representative of the entire catchment as a whole. This implies that tributary channels, and hillslopes feeding the main channel, experience the same precipitation patterns, or that differences between the main channel and its contributing water sources can be ignored. Rainfall spatial variability from tributary channels, or from runoff over hillslopes is lost, or `smeared-out' \citep{Roe2002}. The effects of water routing within a drainage network are also lost, and interesting relationships between rainfall distribution, river network connectivity and erosion are potentially overlooked. Complex parameterisations of rainfall production are often reduced to a single number or exponent in an equation describing the evolution of the landform profile of interest. Rainfall spatial patterns are often complex over correspondingly complex terrain, and only 2D models may suffice to fully explore the sensitivity of landscape process and form to rainfall spatial distribution.
+In the one-dimensional modelling studies discussed, there is a key limitation, which is often acknowledged by the authors. Channel profiles in 1D form are modelled without their tributary streams. The main stem of the channel is assumed to be representative of the entire catchment as a whole. This implies that tributary channels, and hillslopes feeding the main channel, experience the same precipitation patterns, or that differences between the main channel and its contributing water sources can be ignored. Rainfall spatial variability from tributary channels, or from runoff over hillslopes is lost, or smeared-out \citep{Roe2002}. The effects of water routing within a drainage network are also lost, and interesting relationships between rainfall distribution, river network connectivity and erosion are potentially overlooked. Complex parameterisations of rainfall production are often reduced to a single number or exponent in an equation describing the evolution of the landform profile of interest. Rainfall spatial patterns are often complex over correspondingly complex terrain, and only 2D models may suffice to fully explore the sensitivity of landscape process and form to rainfall spatial distribution.
 
 
 %\subsection{2D models}
@@ -72,7 +72,7 @@ In the world of hydrological modelling, distributed\footnote{\textit{Distributed
 Precipitation data generated by numerical weather prediction models has been successfully used in distributed hydrological models to make hydrological forecasts, as well as to analyse historic flooding events. \citet{hay2006one} use the MM5 model (Mesoscale Meteorological model)\footnote{A precursor to the Weather Research and Forecasting model, WRF.} to generate gridded rainfall data over a five-year period. The rainfall data is used to drive the PRMS distributed hydrological model (the Precipitation Runoff Modelling System) over a corresponding five-year period. The numerical weather prediction model is run at grid cell spacings of 20 km, 5 km, and 1.7 km, the finest of which resolves individual valleys and massifs, and captures the resulting rainfall patterns over the catchment at high resolution. The study also compares the way that rainfall input zones in the hydrological model are represented. In the hydrological model, different zones of rainfall input can be defined along natural topographic boundaries, which are termed \textit{Hydrological Response Units}. These rainfall zone units tend to follow sub-catchment boundaries within the main catchment watershed. Alternatively, the catchment can be divided up more simply into rainfall input zones corresponding to a regularly spaced grid at a cell-spacing that matches the resolution of the input data.
 In general, increasing rainfall input resolution in the \citet{hay2006one} study results in a greater accuracy when compared with observed river discharge values. Using irregular-shaped hydrological response units based on natural sub-catchments, rather than a regular gridding of input data, results in better agreement with observed river discharges. However, as resolution increases towards the 1.7 km grid-cell spacing, the difference seen in discharges from using irregular shaped hydrological response units and regular grids of comparable resolution decreases. 
 
-In a study that uses high resolution numerical weather prediction model data to drive a hydrological model, \citet{younger2008usability} test the suitability of rainfall forecast data for making hydrological predictions and improving flood forecasting. High resolution (250 m grid spacing) simulations using the United Kingdom Met Office Unified Model are used to generate input rainfall data to drive a TOPMODEL-based hydrological model \citep{beven2001dynamic}. The semi-distributed hydrological model \textit{Dynamic-TOPMODEL} of \citet{beven2001dynamic} groups topographically similar regions of the catchment and calculates runoff-predction for each of the these self-similar zones. The amount of runoff calculated is then assigned to each node in that particular zone. Computationally, this is more efficient than performing runoff calculations for every single grid cell in the catchment domain.
+In a study that uses high resolution numerical weather prediction model data to drive a hydrological model, \citet{younger2008usability} test the suitability of rainfall forecast data for making hydrological predictions and improving flood forecasting. High resolution (250 m grid spacing) simulations using the United Kingdom Met Office Unified Model are used to generate input rainfall data to drive a TOPMODEL-based hydrological model \citep{beven2001dynamic}. The semi-distributed hydrological model \textit{Dynamic-TOPMODEL} of \citet{beven2001dynamic} groups topographically similar regions of the catchment and calculates runoff-prediction for each of the these self-similar zones. The amount of runoff calculated is then assigned to each node in that particular zone. Computationally, this is more efficient than performing runoff calculations for every single grid cell in the catchment domain.
 The \citet{younger2008usability} study considers two events, a summer convective rainfall event and a winter stratiform rainfall event. Although the hydrological simulation using the dense-network of rainfall gauge data produced outputs more closely matched to discharge observations, simulations with the numerical weather model rainfall forecast also produce accurate results. \citet{younger2008usability} highlight the potential of using high resolution rainfall forecast data to improve flood forecasting in the future, giving greater prediction lead-in times compared to nowcasting from rainfall radar or real time raingauge measurements. 
 
 Rainfall data from numerical weather prediction models lends itself well to use as input data for hydrological modelling; it is typically written in a gridded data output format, and if the user has control over both the generation of the numerical weather prediction model output as well as the hydrological or landscape evolution model, generating compatible data formats can be straightforward.
@@ -136,9 +136,9 @@ The technical capabilities of landscape evolution models have evolved in tandem 
 
 Recent advances in landscape evolution modelling have coupled hydrological model components with erosional process modules to produce hydrodynamic landscape evolution models that do not assume steady state discharge and runoff in a catchment. For example, the CAESAR-Lisflood model \citep{Coulthard2013}, Landlab modelling framework \citep{hobley2017creative}, and tRIBS model \citep{vivoni2011real} all contain forms of distributed hydrological models to simulate the transfer of water as well as sediment between grid cells or nodes. At longer timescales, the meteorological processes representing rainfall over a landscape have been parameterised, though the detail of these parameterisation schemes can be quite sophisticated \citep[e.g.][]{han2015measuring}, incorporating established models of rainfall production and enhancement in mountainous regions \citep{Roe2002,Roe2003,smith2004linear}.
 
-\section{Research needs for hydro-geomorphology}
+\section{Research needs for hydrogeomorphology}
 
-The sensitivity of hydro-geomorphic processes to the spatial details of climate and precipitation is still relatively unexplored. Hydro-geomorphology is key to understanding long-term landscape evolution as well as the shorter-term risks faced by communities in proximity to rivers, floodplains, and landslide-prone areas. Although the field is more advanced in purely hydrological studies \citep{krajewski1991monte,smith2005field,segond2007simulation,nicotina2008impact} there is still a lack of agreement on when sensitivities to rainfall heterogeneities become most pronounced, given the dependence on other aspects of catchment hydrology. The role of runoff generating mechanisms, the influence of vegetation, the influence of groundwater routing pathways, are all affected by the spatial distribution of rainfall in a catchment, yet further investigations into these competing factors are required to reach more consensus among the hydrological community. Although some hydrological studies there is an insensitivity of hydrological processes to rainfall heterogeneity over a catchment \citep{krajewski1991monte,smith2005field}, a key difference in landscape erosion evolution modelling is that many erosional processes are threshold dependent \citep{snyder2003importance}. Findings by \citet{coulthard2016sensitivity} find a pronounced sensitivity to rainfall data resolution in term of sediment flux from a catchment (up to a 100\% increase), in contrast to the relatively small differences observed in purely hydrological models \citep[e.g.][]{nicotina2008impact}. Apart from the \citet{coulthard2016sensitivity}, no other studies have been found that systematically explore landscape evolution model response to rainfall data resolution. Studies have yet to explore the effect of different spatial patterns of rainfall on the hydrogeomorphic impacts of single severe storms. 
+The sensitivity of hydro-geomorphic processes to the spatial details of climate and precipitation is still relatively unexplored. Hydro-geomorphology is key to understanding long-term landscape evolution as well as the shorter-term risks faced by communities in proximity to rivers, floodplains, and landslide-prone areas. Although the field is more advanced in purely hydrological studies \citep{krajewski1991monte,smith2005field,segond2007simulation,nicotina2008impact} there is still a lack of agreement on when sensitivities to rainfall heterogeneities become most pronounced, given the dependence on other aspects of catchment hydrology. The role of runoff generating mechanisms, the influence of vegetation, the influence of groundwater routing pathways, are all affected by the spatial distribution of rainfall in a catchment, yet further investigations into these competing factors are required to reach more consensus among the hydrological community. Although in some hydrological studies there is an insensitivity of hydrological processes to rainfall heterogeneity over a catchment \citep{krajewski1991monte,smith2005field}, a key difference in landscape erosion evolution modelling is that many erosional processes are threshold dependent \citep{snyder2003importance}. Findings by \citet{coulthard2016sensitivity} find a pronounced sensitivity to rainfall data resolution in term of sediment flux from a catchment (up to a 100\% increase), in contrast to the relatively small differences observed in purely hydrological models \citep[e.g.][]{nicotina2008impact}. Apart from the \citet{coulthard2016sensitivity}, no other studies have been found that systematically explore landscape evolution model response to rainfall data resolution. Studies have yet to explore the effect of different spatial patterns of rainfall on the hydrogeomorphic impacts of single severe storms. 
 
 With regards to data sources for rainfall input into landscape evolution models, the most typical source is rainfall gauge data, for single sites or sparse networks across a catchment. Rainfall radar has also been explored as a potential source offering higher spatial resolution that most rain gauge data typically available (Coulthard and Skinner, 2016). Other potential sources include output from numerical weather prediction (NWP) models, or the use of artificial weather generators \citep[e.g.][]{Peleg2014}. These two sources offer the potential to explore a variety of different spatial patterns of rainfall data, without having to source them directly from historic events. With approaches using NWP models to simulate idealised weather conditions, or using weather generators, or data from rainfall radar archives, researchers have the potential to explore sensitivity to the spatial patterns of rainfall for a variety of meteorological conditions, and the potential to systematically explore the effects different distributions of rainfall on landscape erosion and evolution. 
 
@@ -154,7 +154,7 @@ For the aims of this thesis (Chapter \ref{chapter_intro}), a numerical landscape
 
 \begin{enumerate}
 \item Process representation including flood inundation and sediment transport using a variety of sediment transport laws
-\item Capable of simulation hourly-scale flood events (individual storms)
+\item Capable of simulating hourly-scale flood events (individual storms)
 \item Ability to utilise temporally and spatially variable rainfall data sources from gridded rainfall data products.
 \item Scalability to multi-processor computing environments, for conducting ensemble style simulations across multiple compute-nodes, preferably on high-performance computing systems.
 \end{enumerate}
@@ -169,6 +169,6 @@ From a technical implementation perspective, CAESAR-Lisflood is a square-grid ba
 %
 Moreover, the CAESAR-Lisflood model has a large existing community and support network, and is well established having been using in many landscape evolution modelling studies for over two decades \citep{valters2016modelling}. The model's original implementation (in the form of `CAESAR') was tested using upland catchments in the UK \citep{coulthard1999modelling}, and as will be presented in more detail in Chapter \ref{chapter_events}, this thesis will also be based on case studies from upland UK catchments. 
 
-For the reasons discussed above, CAESAR-Lisflood will be used as the basis for and implementation of a landscape evolution model for use in a high-performance computing environment, which is not currently possibly with the existing model due to its implementation in the C\# programming language. The functionality of the model will be extended further to work on multiprocessor parallel computing systems, and with an improved range of erosion laws. The development of this model is presented in Chapter \ref{chapter_HAIL-CAESAR}. A software framework for processing rainfall radar data from the UK rainfall radar system for use in CAESAR-Lisflood and derived models is presented in Chapter \ref{chapter_metdata}.
+For the reasons discussed above, CAESAR-Lisflood will be used as the basis for an implementation of a landscape evolution model for use in a high-performance computing environment, which is not currently possibly with the existing model due to its implementation in the C\# programming language. The functionality of the model will be extended further to work on multiprocessor parallel computing systems, and with an improved range of erosion laws. The development of this model is presented in Chapter \ref{chapter_HAIL-CAESAR}. A software framework for processing rainfall radar data from the UK rainfall radar system for use in CAESAR-Lisflood and derived models is presented in Chapter \ref{chapter_metdata}.
 
  
