--- a/conclusions.tex
+++ b/conclusions.tex
@@ -4,7 +4,7 @@
 
 \section{Review of aims and overview of results}
 
-I set out to investigate the sensitivity of hydrogeomorphic processes to rainfall spatial variability during intense rainfall events. The aims of the thesis presented in Chapter \ref{chapter_intro} consisted of two scientific aims and one technological aim to support them. The scientific aims were to investigate the influence of using spatially variable rainfall input data on a) flood inundation predictions and b) sediment flux and distribution of erosion and deposition; both aims addressed within the context of flash flooding events from intense rainfall. To address these questions, a hydrodynamic landscape evolution model was developed based on an existing model, capable of carrying out ensemble-style simulations on high-performance computing (HPC) services (Chapter \ref{chapter_HAIL-CAESAR}. To build on previous studies that have investigated the role of rainfall spatial resolution in isolation, or with other competing factors, a secondary variable was introduced: the choice of erosional process parameterisation in the model. This study is believed to be the first to investigate the sensitivity of rainfall resolution and erosional process parameterisation in tandem, and to assess which has the greater control on hydrogeomorphic processes in river catchments. It is also one of few studies to investigate the role of these two competing factors within the context of an individual flash flooding event from intense rainfall. 
+I set out to investigate the sensitivity of hydrogeomorphic processes to rainfall spatial variability during intense rainfall events. The aims of the thesis presented in Chapter \ref{chapter_intro} consisted of two scientific aims and one technological aim to support them. The scientific aims were to investigate the influence of using spatially variable rainfall input data on a) flood inundation predictions and b) sediment flux and distribution of erosion and deposition; both aims addressed within the context of flash flooding events from intense rainfall. To address these questions, a hydrodynamic landscape evolution model was developed based on an existing model, capable of carrying out ensemble-style simulations on high-performance computing (HPC) services (Chapter \ref{chapter_HAIL-CAESAR}). To build on previous studies that have investigated the role of rainfall spatial resolution in isolation, or with other competing factors, a secondary variable was introduced: the choice of erosional process parameterisation in the model. This study is believed to be the first to investigate the sensitivity of rainfall resolution and erosional process parameterisation in tandem, and to assess which has the greater control on hydrogeomorphic processes in river catchments. It is also one of few studies to investigate the role of these two competing factors within the context of an individual flash flooding event from intense rainfall. 
 
 The two core scientific hypotheses (presented in detail in Chapter \ref{chapter_events}, Section \ref{section_experiment_design}) stated:
 
@@ -16,7 +16,7 @@ The two core scientific hypotheses (presented in detail in Chapter \ref{chapter_
 These results from the testing of these hypotheses are discussed in the conclusions made in Chapters \ref{chapter_flood_model_sensitivity} and \ref{chapter_hydrogeomorph} and are summarised in the following sections:
 
 \subsection{Flood-inundation model sensitivity}
-Flood inundation model predictions are sensitive to spatial distribution of rainfall inputs, specifically the use of 1km gridded rainfall data, when compared to using uniform avaeraged data as model input. Predicted hydrological discharge is higher using gridded rainfall inputs, though not necessarily more accurate when compared to measured discharges during the respective flood events simulated. In the Boscastle case study, river discharges more closely matched the observed data, whereas in the Ryedale event, uniform rainfall inputs into the model actually produced a better match to observed data. The choice of erosional process parameterisation plays only a secondary role in hydrological response. 
+Flood inundation model predictions are sensitive to spatial distribution of rainfall inputs, specifically the use of 1km gridded rainfall data, when compared to using uniform averaged data as model input. Predicted hydrological discharge is higher using gridded rainfall inputs, though not necessarily more accurate when compared to measured discharges during the respective flood events simulated. In the Boscastle case study, river discharges more closely matched the observed data, whereas in the Ryedale event, uniform rainfall inputs into the model actually produced a better match to observed data. The choice of erosional process parameterisation plays only a secondary role in hydrological response. 
 
 \subsection{Erosion and sediment flux sensitivity}
 Fluvial erosional processes in river catchments are somewhat sensitive to the use of spatially variable rainfall input data to the model, though it is only of secondary importance when compared to the sensitivity observed in the use of different erosional process law parametrisations. The difference in sediment outputs were much greater under a transport-limited type erosion law, compared to a detachment-limited one. The effects from using spatially variable rainfall input data on sediment fluxes were less noticeable in comparison, but still had a measurable effect on sediment fluxes. Using spatially variable rainfall data increased sediment yields in both case studies and under both types of erosional parameterisation.
@@ -48,7 +48,7 @@ Predicting catchment response to intense rainfall events is a pressing societal 
 A number of interested parties have expressed interest in using HAIL-CAESAR for further landscape evolution and hydrological modelling. Future development work is outlined here.
 
 \subsection*{Reach mode}
-Development of the model in future would include the development of a `reach-mode' in addition to the `whole-catchment' mode currently implemented in the model. Reach-mode would be a configuration of the model that allows it to simulate localised sections of a river channel and surrounding area. Reach-mode is also feature of the progenitor to the HAIL-CAESAR model, CAESAR-Lisflood, and has applications where detailed simulations are required of particular sections of river channel, but not of the entire catchment. Reach mode (as part of CAESAR-Lisflood) has been employed in a number of studies to date (CITE) and would be a useful addition to the CAESAR modelling community. 
+Development of the model in future would include the development of a `reach-mode' in addition to the `whole-catchment' mode currently implemented in the model. Reach-mode would be a configuration of the model that allows it to simulate localised sections of a river channel and surrounding area. Reach-mode is also feature of the progenitor to the HAIL-CAESAR model, CAESAR-Lisflood, and has applications where detailed simulations are required of particular sections of river channel, but not of the entire catchment.
 
 \subsection*{Process representation}
 A number of processes in the CAESAR and CAESAR-Lisflood models were omitted in the HAIL-CAESAR development process because of time constraints and applicability to the research questions posed in this thesis. Additional process representation in the HAIL-CAESAR model could be facilitated by the implementation of the following additional subroutines in the model code:
