--- a/introduction.tex
+++ b/introduction.tex
@@ -7,7 +7,7 @@
 
 \section{Overview}
 
-Intense rainfall has the power to cause flash flooding and drive rapid landscape change in a single storm. Rainfall input to river catchments is one of several controls on runoff generation, flood inundation, and sediment dynamics during storms. Understanding how river catchments are sensitive to rainfall patterns during severe storms is important for imporving our ability to predict flood events and the impact they have on the landscape.  Flash floods and the geomorphic effects they have on the landscape pose a risk to communities living in the vicinity of rivers and their floodplains. The majority of the world's population live in temperate or sub-tropical climate regions on the Earth, where water is one of the main forces acting on the landscape and presents a risk to large populations living in proximity to rivers and their floodplains. Flash flooding from intense rainfall can lead to catastrophic consequences for the communities it affects, including loss of life, economic impacts, and damage to the environment. The economic damages in years with substantial flooding events can be costly to residents, businesses, and government. The average economic cost of flooding is estimated at around £1.1 billion annually in England, which could rise to as much as £27 billion by 2080 \citep{bennett2014flood}. The year-to-year impacts from flooding are highly variable, for example, the total costs of the 2007 flooding in the UK was estimated at £3 billion. Outwith the UK, global economic costs due to flooding in the same year were approximately £40 billion \citep{pitt2008pitt}. The variability in the severity of flooding from year-to-year can make mitigation planning difficult, as there is a large degree of natural variability as well as a general increase in likelihood of intense rainfall events in the UK \citep{Kendon2014}. 
+Intense rainfall has the power to cause flash flooding and drive rapid landscape change in a single storm. Rainfall input to river catchments is one of several controls on runoff generation, flood inundation, and sediment dynamics during storms. Understanding how river catchments are sensitive to rainfall patterns during severe storms is important for improving our ability to predict flood events and the impact they have on the landscape.  Flash floods and the geomorphic effects they have on the landscape pose a risk to communities living in the vicinity of rivers and their floodplains. The majority of the world's population live in temperate or sub-tropical climate regions on the Earth, where water is one of the main forces acting on the landscape and presents a risk to large populations living in proximity to rivers and their floodplains \citep{plate2002flood}. Flash flooding from intense rainfall can lead to catastrophic consequences for the communities it affects, including loss of life, economic impacts, and damage to the environment \citep{barredo2009normalised,bennett2014flood}. The economic damages in years with substantial flooding events can be costly to residents, businesses, and government. The average economic cost of flooding is estimated at around £1.1 billion annually in England, which could rise to as much as £27 billion by 2080 \citep{bennett2014flood}. The year-to-year impacts from flooding are highly variable, for example, the total costs of the 2007 flooding in the UK was estimated at £3 billion. Outwith the UK, global economic costs due to flooding in the same year were approximately £40 billion \citep{pitt2008pitt}. The variability in the severity of flooding from year-to-year can make mitigation planning difficult, as there is a large degree of natural variability as well as a general increase in likelihood of intense rainfall events in the UK \citep{Kendon2014}. 
 
 %Importance for longer term geomorphic theory.
 Storm events also drive landscape evolution over longer timescales through the cumulative effects of flash flood events over decades and centuries, as well as global changes in the Earth's atmosphere and tectonic activity \citep{Molnar1990,Molnar2001,whipple2006orogen}. Understanding the sensitivity of catchment-scale erosional processes to rainfall variability is therefore important to increasing our knowledge of landscape evolution theory. The duration and intensity of storms is known to have an effect on the long term morphological evolution of landscapes \citep{Solyom2004,solyom2007importance}, as is the effect of orographic precipitation on mountain range morphology \citep{han2015measuring}.
@@ -17,11 +17,11 @@ Improving predictions of how catchments respond to intense rainfall, and its imp
 
 \subsection{Spatial variability in intense rainfall}
 % Rainfall
-Rainfall is perhaps the most straightforward and direct cause of flooding. Where more rain falls in a period of time than can be transported  by a river channel, or stored in other parts of the river catchment, flooding will occur. Indeed, the ``absurdly simple'' concept known as the First Law of Quantitative Precipitation states that the highest rainfall totals are observed where the rainfall rate is highest for the longest period of time \citep{Doswell1996}. Despite its apparent simplicity, rainfall spatial and temporal patterns can be highly variable down to the catchment scale. The susceptibility of catchments to flash flooding from intense rainfall is dependent on the spatial and temporal distribution of rainfall inputs, as well as the physical characteristics of a river catchment, such as its vegetation cover, soil saturation, sediment dynamics, and channel morphology.
+Rainfall is perhaps the most straightforward and direct cause of flooding. Where more rain falls in a period of time than can be transported  by a river channel, or stored in other parts of the river catchment, flooding will occur. Indeed, the ``absurdly simple'' concept known as the First Law of Quantitative Precipitation states that the highest rainfall totals are observed where the rainfall rate is highest for the longest period of time \citep{Doswell1996}. Despite its apparent simplicity, rainfall spatial and temporal patterns can be highly variable down to the catchment scale. The susceptibility of catchments to flash flooding from intense rainfall is dependent on the spatial and temporal distribution of rainfall inputs, as well as the physical characteristics of a river catchment, such as its vegetation cover, soil saturation, sediment dynamics, channel morphology, and catchment hydromorphometry.
 
-During rain storms, the distribution of rainfall varies in time and space. The spatial distribution of rainfall in a storm is dependent on atmospheric conditions such as the distribution and content of moisture in the atmosphere, wind direction and speed, as well as topography, which can lead to the orographic enhancement of rainfall \citep{Roe2003,Roe2005a,Houze2012}. Spatial variability in rainfall patterns is relative to the size of the catchment over which rain falls and the size of the rainfall feature. From the perspective of the stationary river catchment, rainfall spatially variability is also determined by how a rain cell or cells move across a  catchment during the course of the storm \citep{willems2001spatial}. Typically, rainfall events associated with convective activity, such as occurring in the summer months of the UK, have the potential to create the most spatial variability relative to river catchments, due to their geographically focused characteristics. Convective-style rainfall events are also typically associated with the short intense rainfall events that have led to flash flooding in UK catchments \citep{gray1998mesoscale,bell2000sensitivity,Browning2007,blackburn2008large,Kendon2014}, as well as other catchments further afield \citep{doswell1993flash,Doswell1996}. Spatial variability in convective rain cells can vary considerably; generalised models of rain cell structure shows their spatial distribution of rainfall intensities to be described by a Gaussian distribution \citep{luyckx1998influence,willems2001spatial}, or to put it more evocatively, the shape of a ``wizard's cap'' \citep{solyom2007importance}, with rainfall intensities peaking sharply in the centre of the cell and then decaying rapidly towards the edges.
+During rain storms, the distribution of rainfall varies in time and space. The spatial distribution of rainfall in a storm is dependent on atmospheric conditions such as the distribution and content of moisture in the atmosphere, wind direction and speed, as well as topography, which can lead to the orographic enhancement of rainfall \citep{Roe2003,Roe2005a,Houze2012}. Spatial variability in rainfall patterns is relative to the size of the catchment over which rain falls and the size of the rainfall feature. From the perspective of the stationary river catchment, rainfall spatial variability is also determined by how a rain cell or cells move across a  catchment during the course of the storm \citep{willems2001spatial}. Typically, rainfall events associated with convective activity, such as occurring in the summer months of the UK, have the potential to create the most spatial variability relative to river catchments, due to their geographically focused characteristics. Convective-style rainfall events are also typically associated with the short intense rainfall events that have led to flash flooding in UK catchments \citep{gray1998mesoscale,bell2000sensitivity,Browning2007,blackburn2008large,Kendon2014}, as well as other catchments further afield \citep{doswell1993flash,Doswell1996}. Spatial variability in convective rain cells can vary considerably; generalised models of rain cell structure shows their spatial distribution of rainfall intensities to be described by a Gaussian distribution \citep{luyckx1998influence,willems2001spatial}, or to put it more evocatively, the shape of a ``wizard's cap'' \citep[][p. 86]{solyom2007importance}, with rainfall intensities peaking sharply in the centre of the cell and then decaying rapidly towards the edges.
  
-In summary, there are many sources of rainfall spatial variability during intense rainfall events at a range of scales, yet from a numerical modelling perspective these are often overlooked in favour of more simplistic treatments of rainfall input. Though some research has been directed at understanding the sensitivity of purely hydrolgical models to rainfall spatial variability \citep{krajewski1991monte,nicotina2008impact,segond2007simulation}, in hydrodynamic landscape erosion and evolution models it remains to be fully investigated.
+In summary, there are many sources of rainfall spatial variability during intense rainfall events at a range of scales, yet from a numerical modelling perspective these are often overlooked in favour of more simplistic treatments of rainfall input. Though some research has been directed at understanding the sensitivity of purely hydrological models to rainfall spatial variability \citep{krajewski1991monte,nicotina2008impact,segond2007simulation}, in hydrodynamic landscape erosion and evolution models it remains to be fully investigated.
 
 
 % Now say why this is important and will be investigated here.
@@ -45,7 +45,7 @@ The Mulvaney equation captures two important components of catchment hydrology: 
 %%% Now go on to talk about numerical moels specifically 
 
 %Theoretical applications
-Numerical models have enabled us to address many questions in the theoretical understanding of landscape response to intense rainfall events, such as the influence of stochastic variability in storm intensity and duration \citep{Tucker2000} and the relative importance of storms in runoff production \citep{Darby2013}.  Numerical landscape evolution models have proved useful, if imperfect, tools for the prediction of flooding and landscape change \citep{Tucker2010} both in the short term \citep{beven1984testing}, and in response to longer-duration changes in rainfall events associated with climate change \citep[e.g][]{coulthard2000modelling,Coulthard2012,hancock2017sediment}.
+Numerical models have enabled us to address many questions in the theoretical understanding of landscape response to intense rainfall events, such as the influence of stochastic variability in storm intensity and duration \citep{Tucker2000} and the relative importance of storms in runoff production \citep{Darby2013}.  Numerical landscape evolution models have proved useful, if imperfect, tools for the prediction of flooding and landscape change \citep{Tucker2010} both in the short term \citep{beven1984testing}, and in response to longer-duration changes in rainfall events associated with climate change \citep[e.g.][]{coulthard2000modelling,Coulthard2012,hancock2017sediment}.
 
 %Predictive power
 Predicting the impacts of flash flooding has been aided greatly by the use of numerical models. However, most models, particularly those incorporating landscape erosion processes, typically assume a uniform input of rainfall across the area being studied or simulated. In many meteorological situations, this is unrealistic and does not capture the true spatial and temporal variation in rainfall patterns. As many erosional processes are both a) strongly coupled to hydrological processes \citep{sidle2004hydrogeomorphology,loague2006physics,beven1989floods} and b) threshold dependent \citep{snyder2003importance} or non-linear \citep{coulthard1998non,phillips2003sources}, it follows that numerical models which do not realisitcally capture heterogeneity in rainfall inputs will not accurately predict the distribution of floodwaters and the distribution of erosion during spatially heterogeneous rainfall events.
@@ -62,7 +62,7 @@ To investigate whether hydro-geomorhpic processes are sensitive to the spatial d
 The aims of this thesis are twofold: firstly to address the technological and methodological needs outlined previously through the development of a suitable numerical landscape evolution model, secondly, to use this model to investigate the sensitivity of flood inundation predictions to rainfall heterogeneity and erosional parameterisation within the model. In the context of this thesis, sensitivity to rainfall spatial variability is evaluated in terms of comparing spatially uniform rainfall data with high-resolution rainfall radar data (Chapter \ref{chapter_metdata}). Sensitivity to erosion law parameterisation, for the purposes of the simulations carried out is assessed through varying the choice of erosion and sediment transport laws available in the numerical model, described in Chapter \ref{chapter_HAIL-CAESAR}. The thesis aims can be summarised as follows:
 
 \begin{enumerate}
-\item Develop and test a landscape evolution model capable of simulating landscape erosion and flood inundation, incorporating high-resolution rainfall data meteorological data inputs such as rainfall radar or numerical weather prediction model output. %(Chapter \ref{chapter_HAIL-CAESAR}).
+\item Develop and test a landscape evolution model capable of simulating landscape erosion and flood inundation, incorporating high-resolution rainfall data inputs such as rainfall radar or numerical weather prediction model output. %(Chapter \ref{chapter_HAIL-CAESAR}).
 
 \item Assess the sensitivity of flood inundation predictions during intense rainfall events to two competing factors:
 \begin{enumerate}
@@ -70,7 +70,7 @@ The aims of this thesis are twofold: firstly to address the technological and me
 \item The choice of erosion law parameterisation.
 \end{enumerate}
 
-\item Assess the sensitivity of sediment yields and distribution of erosion during intense rainfall events to the spatial resolution of rainfall input data. The same two factors in are assessed as sources of sensitivity:
+\item Assess the sensitivity of sediment yields and spatial distribution of erosion during intense rainfall events to the spatial resolution of rainfall input data. The same two factors in are assessed as sources of sensitivity:
 \begin{enumerate}
 \item The spatial variability of input rainfall data.
 \item The choice of erosion law parameterisation.
