--- a/literature.bib
+++ b/literature.bib
@@ -133,7 +133,7 @@ volume = {47},
 year = {2011}
 }
 @article{Bonnet2006,
-author = {Bonnet, S. and Crave, a.},
+author = {Bonnet, S. and Crave, A.},
 doi = {10.1144/GSL.SP.2006.253.01.17},
 file = {::},
 issn = {0305-8719},
@@ -262,7 +262,7 @@ title = {{The slope-area method for estimating continuous discharge}},
 year = {2014}
 }
 @article{Browning2007,
-author = {Browning, Keith a. and Morcrette, Cyril J. and Nicol, John and Blyth, Alan M. and Bennett, Lindsay J. and Brooks, Barbara J. and Marsham, John and Mobbs, Stephan D. and Parker, Douglas J. and Perry, Felicity and Clark, Peter a. and Ballard, Sue P. and Dixon, Mark a. and Forbes, Richard M. and Lean, Humphrey W. and Li, Zhihong and Roberts, Nigel M. and Corsmeier, Ulrich and Barthlott, Christian and Deny, Bernhard and Kalthoff, Norbert and Khodayar, Samiro and Kohler, Martin and Kottmeier, Christoph and Kraut, Stephan and Kunz, Michael and Lenfant, J{\"{u}}rgen and Wieser, Andreas and Agnew, Judith L. and Bamber, Dave and McGregor, James and Beswick, Karl M. and Gray, Malcolm D. and Norton, Emily and Ricketts, Hugo M. a. and Russell, Andrew and Vaughan, Geraint and Webb, Ann R. and Bitter, Mark and Feuerle, Thomas and Hankers, Rolf and Schulz, Helmut and Bozier, Karen E. and Collier, Chris G. and Davies, Fay and Gaffard, Catherine and Hewison, Tim J. and Ladd, Darcy N. and Slack, Elizabeth C. and Waight, Joe and Ramatschi, Markus and Wareing, David P. and Watson, Robert J.},
+author = {Browning, Keith A. and Morcrette, Cyril J. and Nicol, John and Blyth, Alan M. and Bennett, Lindsay J. and Brooks, Barbara J. and Marsham, John and Mobbs, Stephan D. and Parker, Douglas J. and Perry, Felicity and Clark, Peter A. and Ballard, Sue P. and Dixon, Mark A. and Forbes, Richard M. and Lean, Humphrey W. and Li, Zhihong and Roberts, Nigel M. and Corsmeier, Ulrich and Barthlott, Christian and Deny, Bernhard and Kalthoff, Norbert and Khodayar, Samiro and Kohler, Martin and Kottmeier, Christoph and Kraut, Stephan and Kunz, Michael and Lenfant, J{\"{u}}rgen and Wieser, Andreas and Agnew, Judith L. and Bamber, Dave and McGregor, James and Beswick, Karl M. and Gray, Malcolm D. and Norton, Emily and Ricketts, Hugo M. A. and Russell, Andrew and Vaughan, Geraint and Webb, Ann R. and Bitter, Mark and Feuerle, Thomas and Hankers, Rolf and Schulz, Helmut and Bozier, Karen E. and Collier, Chris G. and Davies, Fay and Gaffard, Catherine and Hewison, Tim J. and Ladd, Darcy N. and Slack, Elizabeth C. and Waight, Joe and Ramatschi, Markus and Wareing, David P. and Watson, Robert J.},
 doi = {10.1175/BAMS-88-12-1939},
 issn = {0003-0007},
 journal = {Bulletin of the American Meteorological Society},
@@ -495,7 +495,7 @@ volume = {14},
 year = {2000}
 }
 @article{Coulthard2013,
-author = {Coulthard, Tom J. and Neal, Jeff C. and Bates, Paul D. and Ramirez, Jorge and de Almeida, Gustavo a. M. and Hancock, Greg R.},
+author = {Coulthard, Tom J. and Neal, Jeff C. and Bates, Paul D. and Ramirez, Jorge and de Almeida, Gustavo A. M. and Hancock, Greg R.},
 doi = {10.1002/esp.3478},
 issn = {01979337},
 journal = {Earth Surface Processes and Landforms},
@@ -2362,7 +2362,7 @@ year = {2002}
 }
 @article{schoorl2000three,
   title={Three-dimensional landscape process modelling: the effect of DEM resolution},
-  author={Schoorl, JM and Sonneveld, MPW and Veldkamp, A and others},
+  author={Schoorl, JM and Sonneveld, MPW and Veldkamp, A},
   journal={Earth Surface Processes and Landforms},
   volume={25},
   number={9},
@@ -2397,7 +2397,7 @@ year = {2002}
 }
 @article{beven1979physically,
   title={A physically based, variable contributing area model of basin hydrology/Un mod{\`e}le {\`a} base physique de zone d'appel variable de l'hydrologie du bassin versant},
-  author={Beven, KJ and Kirkby, Michael J},
+  author={Beven, Keith and Kirkby, Michael J},
   journal={Hydrological Sciences Journal},
   volume={24},
   number={1},
@@ -2427,7 +2427,7 @@ year = {2002}
 }
 @article{coulthard2007cellular,
   title={Cellular modelling of river catchments and reaches: advantages, limitations and prospects},
-  author={Coulthard, TJ and Hicks, DM and Van De Wiel, Marco J},
+  author={Coulthard, TJ and Hicks, DM and {Van De Wiel}, Marco J},
   journal={Geomorphology},
   volume={90},
   number={3},
@@ -2437,7 +2437,7 @@ year = {2002}
 }
 @article{van2007embedding,
   title={Embedding reach-scale fluvial dynamics within the CAESAR cellular automaton landscape evolution model},
-  author={Van De Wiel, Marco J and Coulthard, Tom J and Macklin, Mark G and Lewin, John},
+  author={{Van De Wiel}, Marco J and Coulthard, Tom J and Macklin, Mark G and Lewin, John},
   journal={Geomorphology},
   volume={90},
   number={3},
@@ -2575,7 +2575,7 @@ year = {2002}
 }
 @article{pelletier2015forecasting,
   title={Forecasting the response of Earth's surface to future climatic and land use changes: A review of methods and research needs},
-  author={Pelletier, Jon D and Brad Murray, A and Pierce, Jennifer L and Bierman, Paul R and Breshears, David D and Crosby, Benjamin T and Ellis, Michael and Foufoula-Georgiou, Efi and Heimsath, Arjun M and Houser, Chris and others},
+  author={Pelletier, Jon D and Brad Murray, A and Pierce, Jennifer L and Bierman, Paul R and Breshears, David D and Crosby, Benjamin T and Ellis, Michael and Foufoula-Georgiou, Efi and Heimsath, Arjun M and Houser, Chris},
   journal={Earth's Future},
   volume={3},
   number={7},
@@ -2825,7 +2825,7 @@ year = {2002}
 }
 @book{beven2011rainfall,
   title={Rainfall-runoff modelling: the primer},
-  author={Beven, Keith J},
+  author={Beven, Keith},
   year={2011},
   publisher={John Wiley \& Sons}
 }
@@ -2879,7 +2879,7 @@ year = {2002}
 }
 @article{pappenberger2006influence,
   title={Influence of uncertain boundary conditions and model structure on flood inundation predictions},
-  author={Pappenberger, Florian and Matgen, Patrick and Beven, Keith J and Henry, Jean-Baptiste and Pfister, Laurent and Fraipont, Paul},
+  author={Pappenberger, Florian and Matgen, Patrick and Beven, Keith and Henry, Jean-Baptiste and Pfister, Laurent and Fraipont, Paul},
   journal={Advances in Water Resources},
   volume={29},
   number={10},
@@ -3093,7 +3093,7 @@ year = {2002}
 }
 @article{schoorl2000three,
   title={Three-dimensional landscape process modelling: the effect of DEM resolution},
-  author={Schoorl, JM and Sonneveld, MPW and Veldkamp, A and others},
+  author={Schoorl, JM and Sonneveld, MPW and Veldkamp, A},
   journal={Earth Surface Processes and Landforms},
   volume={25},
   number={9},
@@ -3523,7 +3523,7 @@ year = {2002}
 }
 @article{wilby2008climate,
   title={Climate change and fluvial flood risk in the UK: more of the same?},
-  author={Wilby, Rob L and Beven, Keith J and Reynard, NS},
+  author={Wilby, Rob L and Beven, Keith and Reynard, NS},
   journal={Hydrological processes},
   volume={22},
   number={14},
@@ -3561,7 +3561,7 @@ year = {2002}
 }
 @article{beven1984testing,
   title={Testing a physically-based flood forecasting model (TOPMODEL) for three UK catchments},
-  author={Beven, KJ and Kirkby, MJ and Schofield, N and Tagg, AF},
+  author={Beven, K and Kirkby, MJ and Schofield, N and Tagg, AF},
   journal={Journal of Hydrology},
   volume={69},
   number={1-4},
@@ -3620,7 +3620,7 @@ year = {2002}
 }
 @article{bruni2015sensitivity,
   title={On the sensitivity of urban hydrodynamic modelling to rainfall spatial and temporal resolution},
-  author={Bruni, Guendalina and Reinoso, R and van de Giesen, NC and Clemens, FHLR and ten Veldhuis, JAE},
+  author={Bruni, Guendalina and Reinoso, R and {van de Giesen}, NC and Clemens, FHLR and {ten Veldhuis}, JAE},
   journal={Hydrology and Earth System Sciences},
   volume={19},
   number={2},
@@ -3747,7 +3747,7 @@ DOI = {10.5194/hess-2016-530}
 }
 @book{shaw2010hydrology,
   title={Hydrology in practice},
-  author={Shaw, Elizabeth M and Beven, Keith J and Chappell, Nick A and Lamb, Rob},
+  author={Shaw, Elizabeth M and Beven, Keith and Chappell, Nick A and Lamb, Rob},
   year={2010},
   publisher={CRC Press}
 }
@@ -3950,7 +3950,7 @@ DOI = {10.5194/hess-2016-530}
   title={Geomorphometric delineation of floodplains and terraces from slope and channel relief thresholds},
   author={Clubb, Fiona and Mudd, Simon and Milodowski, David and Valters, Declan and Slater, Louise and Hurst, Martin and Limaye, Ajay},
   journal={Earth Surface Dynamics},
-  year={in press},
+  year={2017},
   publisher={Copernicus}
 }
 @article{bell2000sensitivity,
@@ -4048,7 +4048,7 @@ DOI = {10.5194/hess-2016-530}
 }
 @book{beven1989floods,
   title={Floods: hydrological, sedimentological and geomorphological implications.},
-  author={Beven, Keith J and Carling, Paul and others},
+  author={Beven, Keith and Carling, Paul},
   year={1989},
   publisher={John Wiley and Sons Ltd.}
 }
@@ -4082,7 +4082,7 @@ DOI = {10.5194/hess-2016-530}
 }
 @article{blackburn2008large,
   title={Large-scale context for the UK floods in summer 2007},
-  author={Blackburn, Mike and Methven, John and Roberts, Nigel and others},
+  author={Blackburn, Mike and Methven, John and Roberts, Nigel},
   journal={Weather},
   volume={63},
   number={9},
@@ -4101,7 +4101,7 @@ DOI = {10.5194/hess-2016-530}
 }
 @inproceedings{doswell1993flash,
   title={Flash flood-producing convective storms: current understanding and research},
-  author={Doswell III, CHARLES A},
+  author={Doswell, Charles A},
   booktitle={Proceedings, Spain-US Joint Workshop on Natural Hazards 8-11 June 1993, Barcelona, Spain},
   year={1993}
 }
@@ -4162,7 +4162,7 @@ DOI = {10.5194/hess-2016-530}
 }
 @inproceedings{skinner2017lemsi,
   title={The Landscape Evolution Model Sensitivity Investigation},
-  author={Skinner, Christopher and Coulthard, Tom and Schwanghart, Wolfgang and Van De Wiel, Marco},
+  author={Skinner, Christopher and Coulthard, Tom and Schwanghart, Wolfgang and {Van De Wiel}, Marco},
   booktitle={EGU General Assembly Conference Abstracts},
   volume={19},
   year={2017}
@@ -4263,7 +4263,7 @@ DOI = {10.5194/hess-2016-530}
 }
 @article{wilson2014best,
   title={Best practices for scientific computing},
-  author={Wilson, Greg and Aruliah, DA and Brown, C Titus and Hong, Neil P Chue and Davis, Matt and Guy, Richard T and Haddock, Steven HD and Huff, Kathryn D and Mitchell, Ian M and Plumbley, Mark D and others},
+  author={Wilson, Greg and Aruliah, DA and Brown, C Titus and Hong, Neil P Chue and Davis, Matt and Guy, Richard T and Haddock, Steven HD and Huff, Kathryn D and Mitchell, Ian M and Plumbley, Mark D},
   journal={PLoS Biol},
   volume={12},
   number={1},
@@ -4404,7 +4404,7 @@ DOI = {10.5194/hess-2016-530}
 }
 @article{meyer1981rain,
   title={How rain intensity affects interrill erosion},
-  author={Meyer, LD and others},
+  author={Meyer, LD},
   journal={Trans. ASAE},
   volume={24},
   number={6},
@@ -4485,7 +4485,7 @@ DOI = {10.5194/hess-2016-530}
 }
 @article{younger2008usability,
   title={The usability of 250 m resolution data from the UK Meteorological Office Unified Model as input data for a hydrological model},
-  author={Younger, Phil M and Gadian, AM and Wang, C-G and Freer, JE and Beven, Keith J},
+  author={Younger, Phil M and Gadian, AM and Wang, C-G and Freer, JE and Beven, Keith},
   journal={Meteorological Applications},
   volume={15},
   number={2},
@@ -5283,7 +5283,7 @@ year = {2006}
 }
 @article{oreskes1994verification,
   title={Verification, validation, and confirmation of numerical models in the earth sciences},
-  author={Oreskes, Naomi and Shrader-Frechette, Kristin and Belitz, Kenneth and others},
+  author={Oreskes, Naomi and Shrader-Frechette, Kristin and Belitz, Kenneth},
   journal={Science},
   volume={263},
   number={5147},
@@ -5571,3 +5571,24 @@ year = {2005}
   pages={4165--4172},
   year={2013}
 }
+@article{plate2002flood,
+  title={Flood risk and flood management},
+  author={Plate, Erich J},
+  journal={Journal of Hydrology},
+  volume={267},
+  number={1},
+  pages={2--11},
+  year={2002},
+  publisher={Elsevier}
+}
+@article{barredo2009normalised,
+  title={Normalised flood losses in Europe: 1970--2006},
+  author={Barredo, Jos{\`e} I},
+  journal={Natural Hazards and Earth System Sciences},
+  volume={9},
+  number={1},
+  pages={97--104},
+  year={2009},
+  publisher={Copernicus GmbH}
+}
+
