--- a/thesis.tex
+++ b/thesis.tex
@@ -16,7 +16,7 @@
 %\includeonly{conclusions}
 %\includeonly{chapter_LEMs}
 %\includeonly{chapter_hailcaesar}
-
+%\includeonly{chapter_events}
 
 \usepackage{rotating}
 \usepackage[labelfont=bf]{caption}
